Fixed problem with too long usernames

--- a/file/style/be.bastelstu.wcf.chat.scss
+++ b/file/style/be.bastelstu.wcf.chat.scss
@@ -88,6 +88,7 @@
 .timsChatMessage {
 	padding-left: 16px;
 	min-height: 16px;
+	clear: both;
 	
 	time {
 		font-size: .8em;
